LPS-138610 Fix Sidebar spacing when A11y Panel is open

--- a/modules/apps/frontend-js/frontend-js-a11y-web/src/main/resources/META-INF/resources/components/Violations.scss
+++ b/modules/apps/frontend-js/frontend-js-a11y-web/src/main/resources/META-INF/resources/components/Violations.scss
@@ -3,18 +3,19 @@ $a11y-panel-width: 320px;
 .a11y-body {
 	padding-right: $a11y-panel-width;
 
+	.lfr-add-panel.sidenav-right,
 	.multi-panel-sidebar,
 	.page-editor__sidebar {
-		right: $a11y-panel-width;
+		right: $a11y-panel-width !important;
 	}
 
 	.multi-panel-sidebar-content,
 	.page-editor__sidebar__content {
-		right: $a11y-panel-width + 42px;
+		right: $a11y-panel-width + 42px !important;
 	}
 
 	.modal-dialog {
-		right: $a11y-panel-width + 45px;
+		right: $a11y-panel-width + 45px !important;
 	}
 
 	.applications-menu-modal {
